Cambiamenti al design e fix vari
Design migliorato e aggiunto il metodo per segnare i messaggi come letti
