# service/api/api-handler.go
@@ -25,6 +25,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/conversations/:conversationID", rt.authMiddleware(rt.wrap(rt.sendMessage)))
 	rt.router.DELETE("/conversations/:conversationID/messages/:messageID", rt.authMiddleware(rt.wrap(rt.deleteMessage)))
 	rt.router.POST("/conversations/:conversationID/messages/:messageID", rt.authMiddleware(rt.wrap(rt.forwardMessage)))
+	rt.router.PUT("/conversations/:conversationID", rt.authMiddleware(rt.wrap(rt.markMessagesAsRead)))
 
 	// Group
 	rt.router.POST("/conversations/:conversationID/participants", rt.authMiddleware(rt.wrap(rt.addToGroup)))
